feat: rediseño integral UI, buscador avanzado y refactor de catálogo